# marcus

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  decisions.md  docker-compose.yml  feature-worl.md  idea.md  improve.md  improvement.md  pyproject.toml  review-open-questions.md  tasks.md  todo-ui-improve.md  todo-work.md  ui-improvement.md
.github/workflows/: ci.yml  release.yml
docs/: marcus-code-handoff.md  prometheus.yml  runbook.md  schema.md
harness/: auth.py  config.py  mq.py  observability.py  scheduler.py
harness/api/: app.py  deps.py  schemas.py
harness/api/routes/: api_keys.py  approvals.py  health.py  llm_settings.py  mcp_servers.py  ops.py  runs.py  scheduled_jobs.py  skills.py  slack.py  slack_settings.py
harness/db/: enums.py  models.py  seed.py  session.py
harness/llm/: gateway.py  providers.py  types.py  usage.py
harness/mcp/: client.py  crypto.py  registry.py  tools.py
harness/runtime/: command_policy.py  compaction.py  context.py  engine.py  file_writes.py  guardrails.py  html_utils.py  lease.py  native_tools.py  native_tools_extra.py  path_utils.py  processes.py  quotas.py  reaper.py  redaction.py  repository.py  result_pipeline.py  state_machine.py  tool_executor.py  tool_validation.py  tools.py  url_validation.py
harness/skills/: registry.py  usage.py
harness/slack/: __init__.py  client.py  service.py  signing.py
harness/workers/: main.py
marcus_code/: banner.py  cli.py  command_info.py  command_warnings.py  commands.py  config.py  loop.py  modes.py  ollama_usage.py  prompt.py  skills.py  task_contract.py  token_utils.py  tools.py  tools_extra.py  ui.py
marcus_code/cli/: app.py  commands.py
marcus_code/runtime/: agent.py  effort_router.py  event_bus.py  events.py  prompt.py  skills.py  todo_tracker.py
marcus_code/state/: config.py
marcus_code/tools/: base.py
marcus_code/ui/: banner.py  command_info.py  console.py  renderer.py  tui.py  warnings.py
migrations/: env.py
migrations/versions/: 28c61b6c37cb_add_mcp_registry_and_approvals.py  6bdb4f61d1b0_add_skill_registry.py  820c794468b2_initial_schema.py  a4d9f831e4f2_add_slack_integration_tables.py  b7e9c204bb9d_add_scheduler_and_quotas.py  c3f6a812d5e7_add_tenant_llm_settings.py  d8a3e6f1b2c4_add_tenant_slack_settings.py  d9e5613ca04a_use_timezone_aware_timestamps.py  f1bb4f9e6a12_add_api_keys.py
tests/: conftest.py  fakes.py  test_api_approvals.py  test_api_llm_settings.py  test_api_mcp_servers.py  test_api_runs.py  test_api_skills.py  test_api_slack_settings.py  test_approval_flow.py  test_auth.py  test_command_policy.py  test_compaction.py  test_config_safety.py  test_db_models.py  test_engine.py  test_file_writes.py  test_health.py  test_lease.py  test_llm_gateway.py  test_llm_providers.py  test_llm_usage.py  test_marcus_code_banner.py  test_marcus_code_cli.py  test_marcus_code_commands.py  test_marcus_code_config.py  test_marcus_code_effort_router.py  test_marcus_code_event_bus.py  test_marcus_code_loop.py  test_marcus_code_mode_hints.py  test_marcus_code_modes.py  test_marcus_code_ollama_usage.py  test_marcus_code_skills.py  test_marcus_code_tools.py  test_marcus_code_tools_extra.py  test_marcus_code_tui.py  test_marcus_code_ui.py  test_mcp_registry.py  test_mcp_tool_names.py  test_mq.py  test_native_tools.py  (+16 more)
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: main.tsx  styles.css
