[project]
name = "marcus"
version = "2.1.1"
description = "Hermes-style AI agent harness with PostgreSQL as source of truth"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Marcus contributors" }]
keywords = ["ai", "agent", "cli", "coding-agent"]
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3.12"]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.30.0",
    "alembic>=1.13.3",
    "redis>=5.1.1",
    "aio-pika>=9.4.3",
    "httpx>=0.27.2",
    "cryptography>=43.0.1",
    "orjson>=3.10.7",
    "mcp>=1.2.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-client>=0.21.0",
    "apscheduler>=3.10.4",
    "rich>=13.7.0",
    "prompt-toolkit>=3.0.43",
    "typer>=0.12.0",
    "inquirerpy>=0.3.4",
]

[project.urls]
Homepage = "https://github.com/lazymarcus005-maker/marcus"
Repository = "https://github.com/lazymarcus005-maker/marcus"
Issues = "https://github.com/lazymarcus005-maker/marcus/issues"

[project.scripts]
marcus = "marcus_code.cli.app:main"

[project.optional-dependencies]
ollama-usage = [
    "playwright>=1.49.0",
]
tui = [
    "textual>=0.85.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["harness", "marcus_code"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# FastAPI's dependency injection requires Depends(...) as an argument default.
"harness/api/**" = ["B008"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["harness", "marcus_code"]
